--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,21 +34,13 @@ jobs:
             sed -i -e '1d' -e 's/:ref:`\(.*\)`/`\1`_/g' $i
           done
           echo "Done"    
-                
-      - name: Upload files to wiki
+
+      - name: Publish to GitHub Wiki
         # You may pin to the exact commit or the version.
-        # uses: Andrew-Chen-Wang/github-wiki-action@b386aca0ddc5ec22b6003ba4cb50fa0b17243f6c
-        uses: Andrew-Chen-Wang/github-wiki-action@v2
+        # uses: SwiftDocOrg/github-wiki-publish-action@a87db85ed06e4431be29cfdcb22b9653881305d0
+        uses: SwiftDocOrg/github-wiki-publish-action@1.0.0
         with:
-          # Directory to rsync files to the wiki.
-          WIKI_DIR: wiki_api/
-          # The GitHub Token for this action to use. Specify secrets.GITHUB_TOKEN.
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_MAIL: ${{ secrets.YOUR_EMAIL }}
-          GH_NAME: ${{ github.repository_owner }}
-          # The target repository. Default is the current repo.
-          REPO: # optional
-          # The commit message for the wiki commit. Default is the commit to actual repository.
-          WIKI_PUSH_MESSAGE: # optional
-          # A list of files you want to exclude (separate with spaces).
-          EXCLUDED_FILES: # optional
+          # A path to the directory of files to publish
+          path: "wiki_api/"
+        env:
+          GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
