--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           python3 ./makerst.py --output wiki_api/ doc_classes/ || /bin/true
           for i in wiki_api/*
           do
-            sed -i -e '1d' -e 's/:ref:`\(.*\)`/`\1`_/g' $i
+            sed -i -e '1d' -e 's/:ref:`\(.*\)<\(.*\)>`/`\1 <\2>`_/g' $i
           done
           echo "Done"    
                     
