--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  wiki:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -31,7 +31,7 @@ jobs:
           python3 ./makerst.py --output wiki_api/ doc_classes/ || /bin/true
           for i in wiki_api/*
           do
-            sed -i -e '1d' -e 's/:ref:`\(.*\)<\(.*\)>`/`\1 <\2>`_/g' $i
+            sed -i -e '1d' -e 's/:ref:`\([^<]*\)<\([^>]*\)>`/`\1 <\2>`_/g' $i
           done
           echo "Done"    
                     
