--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,37 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   push:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches: master
+    paths: doc_classes/
+  pull_request:
+    branches: master
+    paths: doc_classes/
+  
 jobs:
-  # This workflow contains a single job called "build"
   wiki:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
       
-      - name: Download makerst
+      - name: Download makerst.py
         uses: carlosperate/download-file-action@v1.0.3
         with:
           file-url: https://raw.githubusercontent.com/godotengine/godot/3.2/doc/tools/makerst.py
 
-      # Runs a set of commands using the runners shell
-      - name: Export XML documentation to RST
+      - name: Export XML documentation to RST and fix up for Github
         run: |
-          mkdir wiki_api
-          python3 ./makerst.py --output wiki_api/ doc_classes/ || /bin/true
-          for i in wiki_api/*
+          mkdir .wiki
+          python3 ./makerst.py --output .wiki/ doc_classes/ || /bin/true
+          for i in .wiki/*
           do
             sed -i -e '1d' -e 's/:ref:`\([^<]*\)<\([^>]*\)>`/`\1 <\2>`_/g' $i
           done
           echo "Done"    
                     
-      - name: External repo/wiki sync action
-        # You may pin to the exact commit or the version.
-        # uses: kai-tub/external-repo-sync-action@1f5e84783c1657642a7ed293dee667e72c22dace
+      - name: Sync files to wiki
         uses: kai-tub/external-repo-sync-action@v1
         with:
-          source-directory: wiki_api/
+          source-directory: .wiki/
         env:
           GH_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
