--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: CI
 on:
   push:
-    branches: master
+    branches: main
     paths: doc_classes/
   pull_request:
-    branches: master
+    branches: main
     paths: doc_classes/
   
 jobs:
